# matrix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.rst  matrix.spdx.yaml  vcpkg.json
.github/: Invoke-Environment.ps1  clang-format-msg.txt
.github/workflows/: clang-format.yaml  cmake.yaml  linux.yaml  windows.yaml
include/: concept.hpp  exceptions.hpp  matrix.hpp  shape.hpp
scripts/: Invoke-Environment.ps1
src/: matrix.cpp  shape.cpp
test/: CMakeLists.txt
test/src/: operators.cpp  sanity.cpp
